# MeatLoaf

./: FastaConcat.py  FastaSubsetter.py  FreqWords_Mismatches.py  HMMER_domainTblParser.py  JGI_GoLD_download.py  JGI_portal_downloader.py  KoHierarchy_to_table.py  README.md  anvi-furnish-bins.py  checkM_genome_grouper.py  concatenate_FAs.py  create_qiime_map.py  deconGC.cpp  extract_pathway_product_annotations.py  find_nucleotide_identity.py  fr_hit_filter_recruitment_summary.py  freq_pattern_hamming.py  gbft_merge.py  genbank_to_feature_tbl.py  hierarchy2table.py  kmer_counter.py  merge_crispr_outputs.py  metag_summarizer.py  phred_offset_detector.py  pull_NCBI_acc_Pfam.py  read_leveler.py  rmdup_seqs.py  split_library_seq_trimmer.py  tidy_otu_table.py  vxtractor_fastq.py
Cpp_classes/: Fasta.cpp  Fasta.hpp  FastaParser.cpp  PartitionFasta.cpp  getNx.cpp
RPKM_calculator/: README.md  RPKM_calculator.cpp
rpkm_BasicContig/: CMakeLists.txt  RPKMs.csv  helper.c++  helper.h  matchoutputparser.h  rpkm  rpkm.c++  types.h  utilities.c++  utilities.h
test_data/: ZCS100k_levelled.bracken  ZCS_1K.fq  taxa_names.txt
